--- a/index.html
+++ b/index.html
@@ -1,244 +1,6 @@
-<!DOCTYPE HTML>
 <html>
-	<head>
-		<title>Democracy Token</title>
-		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">
-		<link rel="stylesheet" href="assets/css/main.css" />
-		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
-	</head>
-	<body class="is-preload">
 
-		<!-- Sidebar -->
-			<section id="sidebar">
-				<div class="inner">
-					<nav>
-						<ul>
-							<li><a href="#intro">Welcome</a></li>
-							<li><a href="#one">Why DEMOCRACY is unique</a></li>
-							<li><a href="#two">Advantages of Stellar</a></li>
-							<li><a href="#three">Purchase now</a></li>
-							<li><a href="#four">Get in touch</a></li>
-						</ul>
-					</nav>
-				</div>
-			</section>
-
-		<!-- Wrapper -->
-			<div id="wrapper">
-
-				<!-- Intro -->
-					<section id="intro" class="wrapper style1 fullscreen fade-up">
-						<div class="inner">
-							<h1>Democracy Token</h1>
-							<p>An equitable stellar token with a unique system to prohibit whales.</p>
-							<ul class="actions">
-								<li><a href="https://t.me/joinchat/CsjdSSpq90g5Mzgx" class="button scrolly">Learn more on Telegram</a></li>
-							</ul>
-						</div>
-					</section>
-
-				<!-- One -->
-					<section id="one" class="wrapper style2 spotlights">
-						<section>
-							<a href="#" class="image"><img src="images/WhaleIcon.jpg" alt="" data-position="center center" /></a>
-							<div class="content">
-								<div class="inner">
-									<h2>Whale-Proof</h2>
-									<p>Through a unique automated trustline authorization system, DEMOCRACY tokens are proofed against excessive accumulation by a single individual, eliminating the risk of rug-pulls and pump-and-dumps associated with many other stellar tokens.</p>
-									<ul class="actions">
-										<li><a href="technical.html" class="button">Details</a></li>
-									</ul>
-								</div>
-							</div>
-						</section>
-						<section>
-							<a href="#" class="image"><img src="images/Scarcity.png" alt="" data-position="top center" /></a>
-							<div class="content">
-								<div class="inner">
-									<h2>Scarce</h2>
-									<p>With a total supply of only 2 billion tokens, DEMOCRACY is 25x more scarce than stellar lumens, and 5x more scarce than popular lumen tokens like DOGET</p>
-									<ul class="actions">
-										<li><a href="technical.html" class="button">Details</a></li>
-									</ul>
-								</div>
-							</div>
-						</section>
-						<section>
-							<a href="#" class="image"><img src="images/ConstProdInv.png" alt="" data-position="25% 25%" /></a>
-							<div class="content">
-								<div class="inner">
-									<h2>Automatically liquid</h2>
-									<p>The distribution account will release the initial supply of tokens according to a constant product invariant model (quantity * price = constant), and can always accept them back according to the same model. This lead to a naturally liquid market, and ensures that a small supply of tokens will always be available to new users.</p>
-									<ul class="actions">
-										<li><a href="technical.html" class="button">Details</a></li>
-									</ul>
-								</div>
-							</div>
-						</section>
-					</section>
-
-				<!-- Two -->
-					<section id="two" class="wrapper style3 fade-up">
-						<div class="inner">
-							<h2>Advantage of Stellar</h2>
-							<p>By being built on the stellar chain, DEMOCRACY tokens gain many advantages over other DLT tokens</p>
-							<div class="features">
-								<section>
-									<span class="icon solid major fa-leaf"></span>
-									<h3>Environmentally Friendly</h3>
-									<p>Stellar's Consensus Protocol (SCP), a form of Federated Byzantine Agreement (FBA), is orders of magnitude more efficient than Proof of Work (PoW) and Proof of Stake (PoS) systems used by most other blockchains.</p>
-								</section>
-								<section>
-									<span class="icon solid major fa-lock"></span>
-									<h3>Secure</h3>
-									<p>The Stellar blockchain is secure against 51% attacks, and cannot undergo a hard fork due to it's powerful consensus mechanism.</p>
-								</section>
-								<section>
-									<span class="icon solid major fa-cog"></span>
-									<h3>Efficient</h3>
-									<p>Stellar transactions are incredibly rapid, with ledgers closing in 3-5 seconds, and each being capable of processing 100,000 opperations (which can increase over time).</p>
-								</section>
-								<section>
-									<span class="icon solid major fa-desktop"></span>
-									<h3>Publically audited</h3>
-									<p>Use free open-access sites like stellar.expert to view detailed information about DEMOCRACY tokens, and trustlessly confirm all of the information on this page.</p>
-								</section>
-								<section>
-									<span class="icon solid major fa-link"></span>
-									<h3>Immutable</h3>
-									<p>All transactions on the stellar blockchain (under Protocol 16) are immutable, so no one can seize your assets or reverse your transactions. Moreover, DEMOCRACY tokens provide immutable authorization. Once your trustline is approved, no one (even us!) can revoke it.</p>
-								</section>
-								<section>
-									<span class="icon solid major fa-usd"></span>
-									<h3>Affordable</h3>
-									<p>With miniscule transaction fees (0.00001 XLM), using DEMOCRACY tokens costs only a tiny fraction of a cent for any transaction.</p>
-								</section>
-							</div>
-							<!-- <ul class="actions"> 
-								<li><a href="generic.html" class="button">Learn more</a></li>
-							</ul> -->
-						</div>
-					</section>
-				<!-- Three -->
-				<section id="three" class="wrapper style2 spotlights">
-					<section>
-						<a href="#" class="image"><img src="images/SolarWallet.png" alt="" data-position="center center" /></a>
-						<div class="content">
-							<div class="inner">
-								<h2>Buy via Solar Wallet</h2>
-								<p>Read a details tutorial to buy DEMOCRACY using Solar Wallet. If you have another prefered wallet (Lobstr, Keybase, etc...), you can import your wallet to Solar as well, or use one of the other two options.</p>
-								<ul class="actions">
-									<li><a href="BuyDEMOCRACY.html" class="button">Read More</a></li>
-								</ul>
-							</div>
-						</div>
-					</section>
-					<section>
-						<a href="#" class="image"><img src="images/StellarIcon.png" alt="" data-position="top center" /></a>
-						<div class="content">
-							<div class="inner">
-								<h2>Buy via Stellar Laboratory + Anything</h2>
-								<p>A simple (3-click) tutorial on using the stellar laboratory to establish the needed trustline, which will allow you to trade DEMOCRACY anywhere else (StellarTerm, Lobstr, Interstellar...etc)</p>
-								<ul class="actions">
-									<li><a href="BuyDEMOCRACY.html" class="button">Learn more</a></li>
-								</ul>
-							</div>
-						</div>
-					</section>
-					<section>
-						<a href="#" class="image"><img src="images/BuyDirectly.svg" alt="" data-position="25% 25%" /></a>
-						<div class="content">
-							<div class="inner">
-								<h2>Buy directly (requires secret key)</h2>
-								<p>You can also use your secret key to purchase DEMOCRACY directly (please verify that the URL is correct before using this option!)</p>
-								<ul class="actions">
-									<li><a href="ButDEMOCRACY.html" class="button">Learn more</a></li>
-								</ul>
-							</div>
-						</div>
-					</section>
-				</section>
-
-				<!-- Four -->
-					<section id="four" class="wrapper style1 fade-up">
-						<div class="inner">
-							<h2>Get in touch</h2>
-							<p>We're always happy to help or collaborate. Reach out via any of the forms below!</p>
-							<div class="split style1">
-								<section>
-									<form method="post" action="#">
-										<div class="fields">
-											<div class="field half">
-												<label for="name">Name</label>
-												<input type="text" name="name" id="name" />
-											</div>
-											<div class="field half">
-												<label for="email">Email</label>
-												<input type="text" name="email" id="email" />
-											</div>
-											<div class="field">
-												<label for="message">Message</label>
-												<textarea name="message" id="message" rows="5"></textarea>
-											</div>
-										</div>
-										<ul class="actions">
-											<li><a href="" class="button submit">Send Message</a></li>
-										</ul>
-									</form>
-								</section>
-								<section>
-									<ul class="contact">
-										<li>
-											<!--<h3>Address</h3>
-											<span>12345 Somewhere Road #654<br />
-											Nashville, TN 00000-0000<br />
-											USA</span>-->
-										</li>
-										<li>
-											<h3>Email</h3>
-											<a href="#">support@democracy-token.com</a>
-										</li>
-										<li>
-											<h3>Phone</h3>
-											<span>(415) 529-9587</span>
-										</li>
-										<!--<li>
-											<h3>Social</h3>
-											<ul class="icons">
-												<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-												<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
-												<li><a href="#" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
-												<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
-												<li><a href="#" class="icon brands fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
-											</ul> 
-										</li>-->
-									</ul>
-								</section>
-							</div>
-						</div>
-					</section>
-
-			</div>
-
-		<!-- Footer -->
-			<footer id="footer" class="wrapper style1-alt">
-				<div class="inner">
-					<ul class="menu">
-						<li>&copy; Copyright Quantum Financial Systems 2021. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
-					</ul>
-				</div>
-			</footer>
-
-		<!-- Scripts -->
-			<script src="assets/js/jquery.min.js"></script>
-			<script src="assets/js/jquery.scrollex.min.js"></script>
-			<script src="assets/js/jquery.scrolly.min.js"></script>
-			<script src="assets/js/browser.min.js"></script>
-			<script src="assets/js/breakpoints.min.js"></script>
-			<script src="assets/js/util.js"></script>
-			<script src="assets/js/main.js"></script>
-
-	</body>
+<body>
+    <p>The future home of Jaws Crypto!</p> 
+</body>
 </html>
